# pyspark-spy

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini
pyspark_spy/: __init__.py  classes.py  interface.py  listeners.py  spark_events.py  util.py
tests/: conftest.py  test_simple_job.py
